practice/devops_learning/ingress/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: argocd
  namespace: argo

spec:
  ingressClassName: kong

  tls:
  - hosts:
    - argocd.lucky-gun.com

    secretName: domain-tls

  rules:
  - host: argocd.lucky-gun.com

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: argocd-server
            port:
              number: 80
