practice/devops_learning/ingress/harbor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: harbor
  namespace: harbor

spec:
  ingressClassName: kong

  tls:
  - hosts:
    - harbor.lucky-gun.com

    secretName: domain-tls

  rules:
  - host: harbor.lucky-gun.com

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: harbor-core
            port:
              number: 80
