practice/devops_learning/ingress/oauth2-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: oauth2-proxy
  namespace: auth-system

spec:
  ingressClassName: kong

  tls:
  - hosts:
    - boutique.lucky-gun.com

    secretName: domain-tls

  rules:
  - host: boutique.lucky-gun.com

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: oauth2-proxy
            port:
              number: 80
